including html content structural tag

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <h1>Sobre o Clube Atlético Mineiro</h1>
 
 <p>O <strong>Galo</strong> traz para o torcedor o que há de melhor num clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
@@ -8,4 +9,4 @@
 <p>Contamos com um time de atletas preparado para jogar com muita raça e amor.</p>
 
 <p>O clube garante fortes emoções e não se reponsabiliza por torcedores que são cardíacos.</p>
-
+</html>
