--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<meta charset="UTF-8">
-	<title>Clube Atlético Mineiro</title>
+	<head>
+		<meta charset="UTF-8">
+		<title>Clube Atlético Mineiro</title>
+	</head>
+	
 	<h1>Sobre o Clube Atlético Mineiro</h1>
 
 	<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor num clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
