--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor num clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
 
-		<p><em>Nossa missão é: <strong>"Fazer o torcedor sofrer para, só então, fazê-lo sorrir"</strong>.</em></p>
+		<p style="font-size: 20px"><em>Nossa missão é: <strong>"Fazer o torcedor sofrer para, só então, fazê-lo sorrir"</strong>.</em></p>
 
 		<p>Contamos com um time de atletas preparado para jogar com muita raça e amor.</p>
 
