creating an external file to store the style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Clube Atlético Mineiro</title>
-
+		<link rel="stylesheet" href="style.css">
 		<style>
-			p {
-				text-align: center;
-			 }
+			
 		</style>
 	</head>
 	
