--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	
 	<body>
-		<h1 style="text-align: center; background: #CCCCCC;">Sobre o Clube Atlético Mineiro</h1>
+		<h1 style="text-align: center;">Sobre o Clube Atlético Mineiro</h1>
 
 		<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor num clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
 
