--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	</head>
 	
 	<body>
-		<h1 style="text-align: center;">Sobre o Clube Atlético Mineiro</h1>
+		<h1>Sobre o Clube Atlético Mineiro</h1>
 
 		<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor num clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
 
-		<p style="font-size: 20px;"><em>Nossa missão é: <strong>"Fazer o torcedor sofrer para, só então, fazê-lo sorrir"</strong>.</em></p>
+		<p><em>Nossa missão é: <strong>"Fazer o torcedor sofrer para, só então, fazê-lo sorrir"</strong>.</em></p>
 
 		<p>Contamos com um time de atletas preparado para jogar com muita raça e amor.</p>
 
