--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 
 		<h1>Sobre o Clube Atlético Mineiro</h1>
 
-		<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor num clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
+		<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor em um clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
 
 		<p id="missao"><em>Nossa missão é: <strong>"Fazer o torcedor sofrer para, só então, fazê-lo sorrir"</strong>.</em></p>
 
 		<p>Contamos com um time de atletas preparado para jogar com muita raça e amor.</p>
 
 		<p>O clube garante fortes emoções e não se reponsabiliza por torcedores que são cardíacos.</p>
+
+		<h2>Benefícios</h2>
+
+		*Emoção garantida
+		*Torcida zelosa
+
 	</body>
 </html>
