adding a markup to list items through the li tag

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<h2>Benefícios</h2>
 
 		<ul>
-			*Emoção garantida
-			*Torcida zelosa
+			<li>Emoção garantida</li>
+			<li>Torcida zelosa</li>
 		</ul>
 
 	</body>
