adding the class property to mark list items

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<h2>Benefícios</h2>
 
 		<ul>
-			<li>Emoção garantida</li>
-			<li>Torcida zelosa</li>
+			<li class="itens">Emoção garantida</li>
+			<li class="itens">Torcida zelosa</li>
 		</ul>
 
 	</body>
