dividing the content of the site into sections with the div tag

--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
 	<body>
 		<img id="banner" src="banner.jpg">
 
-		<h1>Sobre o Clube Atlético Mineiro</h1>
+		<div>
+			<h1>Sobre o Clube Atlético Mineiro</h1>
 
-		<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor em um clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
+			<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor em um clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
 
-		<p id="missao"><em>Nossa missão é: <strong>"Fazer o torcedor sofrer para, só então, fazê-lo sorrir"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Fazer o torcedor sofrer para, só então, fazê-lo sorrir"</strong>.</em></p>
 
-		<p>Contamos com um time de atletas preparado para jogar com muita raça e amor.</p>
+			<p>Contamos com um time de atletas preparado para jogar com muita raça e amor.</p>
 
-		<p>O clube garante fortes emoções e não se reponsabiliza por torcedores que são cardíacos.</p>
+			<p>O clube garante fortes emoções e não se reponsabiliza por torcedores que são cardíacos.</p>
+		</div>
 
-		<h2>Benefícios</h2>
+		<div>
+			<h2>Benefícios</h2>
 
-		<ul>
-			<li class="itens">Emoção garantida</li>
-			<li class="itens">Torcida zelosa</li>
-		</ul>
+			<ul>
+				<li class="itens">Emoção garantida</li>
+				<li class="itens">Torcida zelosa</li>
+			</ul>
+		</div>
 
 	</body>
 </html>
