adding the class property in the benefits division

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p>O clube garante fortes emoções e não se reponsabiliza por torcedores que são cardíacos.</p>
 		</div>
 
-		<div>
+		<div class="beneficios">
 			<h2>Benefícios</h2>
 
 			<ul>
