adding the class property in the main division

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<img id="banner" src="banner.jpg">
 
-		<div>
+		<div class="principal">
 			<h1>Sobre o Clube Atlético Mineiro</h1>
 
 			<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor em um clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
