--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 				<li class="itens">Emoção garantida</li>
 				<li class="itens">Torcida zelosa</li>
 			</ul>
+
+			<img id="beneficios" src="beneficios.jpg">
 		</div>
 
 	</body>
