removing the unique identifier

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<li class="itens">Torcida zelosa</li>
 			</ul>
 
-			<img id="beneficios" src="beneficios.jpg">
+			<img src="beneficios.jpg">
 		</div>
 
 	</body>
