--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	</head>
 	
 	<body>
+		<header>
+			Clube Atlético Mineiro 
+		</header>
+		
 		<img id="banner" src="banner.jpg">
 
 		<div class="principal">
