--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	
 	<body>
 		<header>
-			Clube Atlético Mineiro 
+			<h1>Clube Atlético Mineiro</h1> 
 		</header>
-		
+
 		<img id="banner" src="banner.jpg">
 
 		<div class="principal">
-			<h1>Sobre o Clube Atlético Mineiro</h1>
+			<h2>Sobre o Clube Atlético Mineiro</h2>
 
 			<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor em um clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
 
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class="beneficios">
-			<h2>Benefícios</h2>
+			<h3>Benefícios</h3>
 
 			<ul>
 				<li class="itens">Emoção garantida</li>
