adding the class property int the h1 and h2 header tags to later center their stylization which is currently the same and is generating code repetition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<img id="banner" src="banner.jpg">
 
 		<div class="principal">
-			<h2>Sobre o Clube Atlético Mineiro</h2>
+			<h2 class="titulo-centralizado">Sobre o Clube Atlético Mineiro</h2>
 
 			<p>O <strong>Galo</strong> traz para o torcedor o que há de melhor em um clube de futebol. Fundado em 1908, o Clube Atlético Mineiro arrebata o coração de torcedores há gerações.</p>
 
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class="beneficios">
-			<h3>Benefícios</h3>
+			<h3 class="titulo-centralizado">Benefícios</h3>
 
 			<ul>
 				<li class="itens">Emoção garantida</li>
