--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<body>
 		<header>
-			<h1>Clube Atlético Mineiro</h1> 
+			<h1 class="titulo-principal">Clube Atlético Mineiro</h1> 
 		</header>
 
 		<img id="banner" src="banner.jpg">
