--- a/produtos.html
+++ b/produtos.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
+		<meta charset="UTF-8">
+		<title>Produtos - Clube Atlético Mineiro</title>
 	</head>
 
 	<body>
