creating the stylesheet relationship with html

--- a/produtos.html
+++ b/produtos.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Produtos - Clube Atlético Mineiro</title>
+		<link rel="stylesheet" href="produtos.css">
 	</head>
 
 	<body>
