--- a/produtos.html
+++ b/produtos.html
@@ -9,6 +9,12 @@
 	<body>
 		<header>
 			<h1><img src="logo.jpg"></h1>
+
+			<ul>
+				<li>Home</li>
+				<li>Produtos</li>
+				<li>Contato</li>
+			</ul>
 		</header>
 	</body>
 
