adding the anchor tag with the reference adress to which the list item should forward

--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 			<h1><img src="logo.jpg"></h1>
 
 			<ul>
-				<li>Home</li>
+				<li><a href="index.html">Home</a></li>
 				<li>Produtos</li>
 				<li>Contato</li>
 			</ul>
