--- a/produtos.html
+++ b/produtos.html
@@ -12,8 +12,8 @@
 
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li>Produtos</li>
-				<li>Contato</li>
+				<li><a href="produtos.html">Produtos</a></li>
+				<li><a href="contato.html">Contato</a></li>
 			</ul>
 		</header>
 	</body>
