--- a/produtos.html
+++ b/produtos.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<header>
-			<h1><img src="logo.jpg"></h1>
+			<h1><img src="logo.png"></h1>
 
 			<ul>
 				<li><a href="index.html">Home</a></li>
